--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       </div>
     </div>
 
+    <!--Script.js -->
+    <script src="script.js"></script>
     <!-- jQuery JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Bootstrap JS -->
