--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <!-- Bootstrap 4 CSS -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" />
     <!-- Font Awesome CSS -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    />
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" />
   </head>
   <body>
     <div class="tile" id="tile-1">
@@ -79,32 +77,28 @@
           class="tab-pane fade show active"
           id="home"
           role="tabpanel"
-          aria-labelledby="home-tab"
-        >
+          aria-labelledby="home-tab">
           Home
         </div>
         <div
           class="tab-pane fade"
           id="profile"
           role="tabpanel"
-          aria-labelledby="profile-tab"
-        >
+          aria-labelledby="profile-tab">
           Profile
         </div>
         <div
           class="tab-pane fade"
           id="contact"
           role="tabpanel"
-          aria-labelledby="contact-tab"
-        >
+          aria-labelledby="contact-tab">
           Contact
         </div>
         <div
           class="tab-pane fade"
           id="setting"
           role="tabpanel"
-          aria-labelledby="setting-tab"
-        >
+          aria-labelledby="setting-tab">
           Settings
         </div>
       </div>
